--- a/public/templates/top-content.html
+++ b/public/templates/top-content.html
@@ -1,33 +1,35 @@
 <div class="panel-wrap">
     <h2>About this Single Page Application</h2>
     <p class="about-intro">
-        When developing this application, I utilized a few of my favorite tools to achieve my end goal of creating a page that showcases me knowledge of web development; more specificially, my dedication to learning full stack development, while also noting my love for the use of proper design to also help in creating the best possible user experiences.
+        When developing this web application, I integrated several key technologies that I spend a great deal of time with during my tenure studying web development. In order to showcase these technologies, I decided to create this state of my application.
     </p>
     <div class="panel">
         <img class="panel_img" src="images/skills/Angular-300x290.png" alt="">
         <h2 class="panel-heading">Nested States with the Help of UI-Router</h2>
-        <p>When building this application, I took advantage of using absolute states with<a href="https://github.com/angular-ui/ui-router" target="_blank">UI-Router</a>, which help makes this application extremely scalable. Moreover, I can easily add and remove different groups of content such as sidebars and footers by using named views tied to specific templates. In this application, every page consists of Header, Main-Content, and Footer view for the most part, with the exception of this view; Moreover, this view includes an additonal div created to handle anchor elements at the bottom of the page, which in this case is linked to this project's GitHub repository.
+        <p>
+            When building this application, I took advantage of using absolute naming with. As a result of this, I have the ability to easily integrate new content into my application, as well as remote it. In turn, this application extremely scalable. In this application, every state consists of Header, Main-Content, and Footer view for the most part, with the exception of this view. This view, on the other hand, includes an additional div created to handle anchor elements at the bottom of the page, which in this case is linked to this project's GitHub repository.
         </p>
     </div>
     <div class="panel">
-        <img class="panel_img" src="images/skills/firebase300.png" alt="">
-        <h2 class="panel-heading">MongoDB &amp; Ambitious JavaScript Applications</h2>
-        <p>When I was introduced to server-side programming, I worked breifly with PHP and MySql databases using <a href="http://mamp.info" target="_blank">MAMP</a> before placing the majority of my focus on client-side JavaScript, and the front-end in general. Sure enough, I soon found myself back on the server, striving to learn the inner workings of the node platform. </p>
-    </div>
-    <div class="panel">
         <img class="panel_img" src="images/mongoDB.png" alt="">
-        <h2 class="panel-heading">Real-time Data Sync with FireBase</h2>
-        <p>Throughout my time learning web development, I have learned to live by the idea of using the most suitable technology for the goal at hand. Therefore, I thought it was appropriate to utilize the <a href="http://firebase.com">FireBase Backend-as-a-Service</a> (BaaS) when wiring this application's <a ui-sref="contact">contact form</a> because of how easily it FireBase makes working with data. Additionally, I immediately became a fan of FireBase after first learning about the technology last Fall, and have since spent a significant amount of time using the real-time API </p>
+        <h2 class="panel-heading">MongoDB Database Storage in the Back-end</h2>
+        <p>
+             When buiding out this applicaton, I understood the importance of creating a method of users getting in touch with me. Therefore, I created a basic application form which I originally had wired to utilize FireBase's Backend-As-A-Service. Now, however, I have configured it to use MongoDB's NoSql Database. When dealing with MongoDB, I have worked to gain a great deal of knowledge of collections, and how to query databases for groups of data, as well as specific items in a collection.
+        </p>
     </div>
     <div class="panel">
         <img class="panel_img" src="images/skills/grunt300x300.png" alt="">
         <h2 class="panel-heading">Built Using the Grunt JavaScript Task Runner</h2>
-        <p>Whether I am using hotkeys in Adobe Illustrator, or using Emmett's sublime text plug-in, I am always looking to speed up my development process. Therefore, I have recently integrated <a href="http://gruntjs.com" target="_blank">GruntJS</a> into my workflow to help run different tasks which make my job as a developer easier. Initially, I turned to Grunt to handle my .scss files, and reload them live in the browser. Now, as I continue to utilize Grunt each day, I have become extremely familiar with configuring Grunt tasks, and grow more fond of the task runner each day. In this project specifically, I was able to run the Compass framework without a config.rb file using Grunt. That said, I have experience in using <a href="http://gulpjs.com/" target="_blank">GulpJS</a>however I decided to stick with learning Grunt instead as time is always off the essence.</p>
+        <p>
+            Whether I am using hot-keys in Adobe Illustrator, or using Sublime text plug-ins, I am always looking to speed up my development process. Therefore, I began to integrate GruntJS into my work-flow so that I could take care of all my tasks at once. Initially, I turned to Grunt to handle my .scss files, and reload them live in the browser after having trouble with Compass as a Ruby Gem. Now, as I continue to utilize Grunt each day, I have become comfortable with how Gruntfiles are configured. In turn, I grow more fond of the task runner each day. In addition to using Grunt, I have experience in using GulpJS, however, I decided to stick with learning Grunt instead as I felt as though it was used more widely throughout the development community.
+        </p>
     </div>
     <div class="panel">
         <img class="panel_img" src="images/skills/susy.png" alt="">
         <h2 class="panel-heading">Custom Grid System with Susy</h2>
-        <p>Over the past month or so, I have began to utilize Grunt to help me complete several different tasks in a timely manner. Specifically, I turned to Grunt to help easily grant me access to LiveReload, so I did not have to continuously restart my server upon making changes to my files. As I continue to utilize Grunt in different projects, I now know how to add and remove tasks whenever necessary, and have become extremely comfortable with using it. That said, I am sure I could achieve the same success after a few hours with <a href="http://gulpjs.com/" target="_blank">GulpJS</a>, however I was forced to choose Grunt as time is always off the essence.</p>
+        <p>
+            Due to my background in graphic design, I quickly became infatuated with responsive design. Therefore, my first main area of focus was to understand how these different grid systems, most notable Twitter BootStrap and Zurb Foundation. Moreover, I began practicing with Susy to create custom grid systems as I became more proficient working with the Compass Framework, which is what I used to create this web page. As time continues to evolve with the times, however, I truly believe the flexbox layout will be utilized very heavily, and I am happy to see that Google Materialize has already utilized the flex layout, which has helped theme successfully implement an extremely powerful system of tools.
+        </p>
     </div>
     <hr class="about-hr">
 </div>
