Continued to work on form validation .. Having problems with ng-message

--- a/public/sass/_typography.scss
+++ b/public/sass/_typography.scss
@@ -104,5 +104,15 @@ li a {
     @include adjust-font-size-to(16px);
     padding-top: rhythm(1, 16px);
     text-align: center;
-    text-weight: $bold;
+    font-weight: $bold;
+}
+
+
+a .button .border-button {
+    font-family: $font-one;
+    font-weight: $bold;
+}
+
+select {
+    color: black;
 }
