--- a/public/css/style.css
+++ b/public/css/style.css
@@ -542,135 +542,6 @@ footer {
   height: 50px;
 }
 
-/* line 12, ../sass/_typography.scss */
-body {
-  font-family: "Merriweather";
-}
-
-/* line 15, ../sass/_typography.scss */
-h1 {
-  font-size: 2.25em;
-  line-height: 1.33333333em;
-  margin-top: 0.66666667em;
-  font-weight: 700;
-}
-
-/* line 21, ../sass/_typography.scss */
-h2 {
-  font-size: 1.5em;
-  line-height: 2em;
-  margin-top: 1em;
-  font-weight: 700;
-}
-/* line 25, ../sass/_typography.scss */
-h2 .main-heading {
-  text-align: center;
-}
-
-/* line 30, ../sass/_typography.scss */
-.panel-heading {
-  font-size: 1.5em;
-  line-height: 2em;
-  margin-bottom: 1em;
-  font-weight: 700;
-  text-align: center;
-}
-
-/* line 37, ../sass/_typography.scss */
-h1.blue-head {
-  color: #2b94c2;
-}
-
-/* line 40, ../sass/_typography.scss */
-h3 {
-  font-size: 1.3125em;
-  line-height: 2.28571429em;
-  font-weight: 300;
-}
-/* line 43, ../sass/_typography.scss */
-h3 center {
-  text-align: center;
-}
-
-/* line 47, ../sass/_typography.scss */
-p {
-  font-size: 1em;
-  line-height: 1.5em;
-  margin-bottom: 1.5em;
-  font-weight: 300;
-  text-align: justify;
-}
-/* line 52, ../sass/_typography.scss */
-p > em {
-  font-style: italic;
-}
-
-/* line 58, ../sass/_typography.scss */
-.about-intro {
-  font-style: italic;
-  text-align: justify;
-  padding: 1em;
-}
-
-/* line 64, ../sass/_typography.scss */
-.lr-heading {
-  text-align: center;
-}
-
-/* line 68, ../sass/_typography.scss */
-.header-text {
-  font-size: 1.125em;
-  line-height: 1.33333333em;
-  margin-bottom: 1.33333333em;
-}
-
-/* line 72, ../sass/_typography.scss */
-.quote-text {
-  font-size: 1.375em;
-  line-height: 2.18181818em;
-  margin-top: 1.09090909em;
-  margin-bottom: 5px;
-  text-align: center;
-  color: white;
-}
-
-/* line 79, ../sass/_typography.scss */
-.top-nav > li a {
-  font-size: 1.125em;
-  line-height: 1.33333333em;
-  padding-right: 1.33333333em;
-}
-
-/* line 84, ../sass/_typography.scss */
-.button {
-  font-family: "Merriweather";
-  font-weight: 700;
-}
-
-/* line 89, ../sass/_typography.scss */
-li a {
-  text-decoration: none;
-}
-
-/* line 94, ../sass/_typography.scss */
-.form-wrapper h2 {
-  text-align: center;
-}
-
-/* line 99, ../sass/_typography.scss */
-.main-heading {
-  text-align: center;
-}
-
-/* line 103, ../sass/_typography.scss */
-.footer-text {
-  font-size: 1em;
-  line-height: 1.5em;
-  padding-top: 1.5em;
-  text-align: center;
-  text-weight: 700;
-}
-
 /*! @license
 * Copyright 2012-2014 Alex Wolfe and Rob Levin
 *
@@ -1599,13 +1470,153 @@ input.button-tiny, button.button-tiny {
   color: #FFF;
 }
 
+/* line 12, ../sass/_typography.scss */
+body {
+  font-family: "Merriweather";
+}
+
+/* line 15, ../sass/_typography.scss */
+h1 {
+  font-size: 2.25em;
+  line-height: 1.33333333em;
+  margin-top: 0.66666667em;
+  font-weight: 700;
+}
+
+/* line 21, ../sass/_typography.scss */
+h2 {
+  font-size: 1.5em;
+  line-height: 2em;
+  margin-top: 1em;
+  font-weight: 700;
+}
+/* line 25, ../sass/_typography.scss */
+h2 .main-heading {
+  text-align: center;
+}
+
+/* line 30, ../sass/_typography.scss */
+.panel-heading {
+  font-size: 1.5em;
+  line-height: 2em;
+  margin-bottom: 1em;
+  font-weight: 700;
+  text-align: center;
+}
+
+/* line 37, ../sass/_typography.scss */
+h1.blue-head {
+  color: #2b94c2;
+}
+
+/* line 40, ../sass/_typography.scss */
+h3 {
+  font-size: 1.3125em;
+  line-height: 2.28571429em;
+  font-weight: 300;
+}
+/* line 43, ../sass/_typography.scss */
+h3 center {
+  text-align: center;
+}
+
+/* line 47, ../sass/_typography.scss */
+p {
+  font-size: 1em;
+  line-height: 1.5em;
+  margin-bottom: 1.5em;
+  font-weight: 300;
+  text-align: justify;
+}
+/* line 52, ../sass/_typography.scss */
+p > em {
+  font-style: italic;
+}
+
+/* line 58, ../sass/_typography.scss */
+.about-intro {
+  font-style: italic;
+  text-align: justify;
+  padding: 1em;
+}
+
+/* line 64, ../sass/_typography.scss */
+.lr-heading {
+  text-align: center;
+}
+
+/* line 68, ../sass/_typography.scss */
+.header-text {
+  font-size: 1.125em;
+  line-height: 1.33333333em;
+  margin-bottom: 1.33333333em;
+}
+
+/* line 72, ../sass/_typography.scss */
+.quote-text {
+  font-size: 1.375em;
+  line-height: 2.18181818em;
+  margin-top: 1.09090909em;
+  margin-bottom: 5px;
+  text-align: center;
+  color: white;
+}
+
+/* line 79, ../sass/_typography.scss */
+.top-nav > li a {
+  font-size: 1.125em;
+  line-height: 1.33333333em;
+  padding-right: 1.33333333em;
+}
+
+/* line 84, ../sass/_typography.scss */
+.button {
+  font-family: "Merriweather";
+  font-weight: 700;
+}
+
+/* line 89, ../sass/_typography.scss */
+li a {
+  text-decoration: none;
+}
+
+/* line 94, ../sass/_typography.scss */
+.form-wrapper h2 {
+  text-align: center;
+}
+
+/* line 99, ../sass/_typography.scss */
+.main-heading {
+  text-align: center;
+}
+
+/* line 103, ../sass/_typography.scss */
+.footer-text {
+  font-size: 1em;
+  line-height: 1.5em;
+  padding-top: 1.5em;
+  text-align: center;
+  font-weight: 700;
+}
+
+/* line 111, ../sass/_typography.scss */
+a .button .border-button {
+  font-family: "Merriweather";
+  font-weight: 700;
+}
+
+/* line 116, ../sass/_typography.scss */
+select {
+  color: black;
+}
+
 /* centered columns styles */
-/* line 16, ../sass/style.scss */
+/* line 17, ../sass/style.scss */
 .row-centered {
   text-align: center;
 }
 
-/* line 21, ../sass/style.scss */
+/* line 22, ../sass/style.scss */
 .col-centered {
   display: inline-block;
   float: none;
@@ -1615,23 +1626,23 @@ input.button-tiny, button.button-tiny {
   margin-right: -4px;
 }
 
-/* line 32, ../sass/style.scss */
+/* line 33, ../sass/style.scss */
 .button-row {
   margin-bottom: 15px;
 }
 
-/* line 36, ../sass/style.scss */
+/* line 37, ../sass/style.scss */
 .panel .panel-primary {
   background: #051153;
 }
 
-/* line 40, ../sass/style.scss */
+/* line 41, ../sass/style.scss */
 label {
   padding-top: 10px;
 }
 
 @media (min-width: 320px) {
-  /* line 45, ../sass/style.scss */
+  /* line 46, ../sass/style.scss */
   header {
     background-image: url("/images/nyc-60.jpg");
     background-size: cover;
@@ -1639,7 +1650,7 @@ label {
   }
 }
 @media (min-width: 760px) {
-  /* line 53, ../sass/style.scss */
+  /* line 54, ../sass/style.scss */
   header {
     background-image: url("/images/nyc-60.jpg");
     background-size: cover;
@@ -1647,18 +1658,18 @@ label {
   }
 }
 @media screen and (max-width: 669px) {
-  /* line 61, ../sass/style.scss */
+  /* line 62, ../sass/style.scss */
   .flex-nav {
     display: none;
   }
 
-  /* line 64, ../sass/style.scss */
+  /* line 65, ../sass/style.scss */
   .flex-nav-item > a {
     display: none;
   }
 }
 @media screen and (min-width: 670px) {
-  /* line 70, ../sass/style.scss */
+  /* line 71, ../sass/style.scss */
   .flex-nav {
     display: -webkit-flex;
     display: flex;
@@ -1671,7 +1682,7 @@ label {
     padding: 10px;
   }
 
-  /* line 79, ../sass/style.scss */
+  /* line 80, ../sass/style.scss */
   .flex-nav-item, .search, .icon {
     -webkit-align-items: center;
     align-items: center;
@@ -1696,23 +1707,23 @@ label {
     color: #212;
   }
 
-  /* line 90, ../sass/style.scss */
+  /* line 91, ../sass/style.scss */
   .flex-nav-item:hover {
     background-color: #aaa;
   }
 
-  /* line 94, ../sass/style.scss */
+  /* line 95, ../sass/style.scss */
   .search {
     -webkit-flex-grow: 1;
     flex-grow: 1;
   }
-  /* line 97, ../sass/style.scss */
+  /* line 98, ../sass/style.scss */
   .search:hover {
     background-color: #aaa;
   }
 }
 @media screen and (min-width: 670px) {
-  /* line 104, ../sass/style.scss */
+  /* line 105, ../sass/style.scss */
   .bottom-flex-nav {
     display: -webkit-flex;
     display: flex;
@@ -1721,7 +1732,7 @@ label {
     width: 100%;
   }
 
-  /* line 109, ../sass/style.scss */
+  /* line 110, ../sass/style.scss */
   .bottom-nav-items {
     -webkit-align-items: center;
     align-items: center;
@@ -1733,22 +1744,22 @@ label {
     padding: 5px 10px;
   }
 
-  /* line 119, ../sass/style.scss */
+  /* line 120, ../sass/style.scss */
   .bottom-nav-items:hover {
     background-color: #aaa;
   }
 
-  /* line 123, ../sass/style.scss */
+  /* line 124, ../sass/style.scss */
   .icon {
     -webkit-flex-grow: 1;
     flex-grow: 1;
   }
-  /* line 126, ../sass/style.scss */
+  /* line 127, ../sass/style.scss */
   .icon:hover {
     background-color: #aaa;
   }
 }
-/* line 132, ../sass/style.scss */
+/* line 133, ../sass/style.scss */
 #nav,
 .tinynav {
   display: none;
@@ -1756,7 +1767,7 @@ label {
 
 /* styles for mobile */
 @media screen and (max-width: 669px) {
-  /* line 139, ../sass/style.scss */
+  /* line 140, ../sass/style.scss */
   .nav-toggle {
     width: 100%;
     float: left;
@@ -1764,13 +1775,13 @@ label {
     margin-right: 0;
     background: white;
   }
-  /* line 142, ../sass/style.scss */
+  /* line 143, ../sass/style.scss */
   .nav-toggle .tinynav {
     display: block;
     width: 100%;
   }
 }
-/* line 149, ../sass/style.scss */
+/* line 150, ../sass/style.scss */
 a .button .button-border {
   width: 200px;
   margin-bottom: 20px;
