Reverted back to original form due to problems currenty faced with while using ngMessages

--- a/public/templates/mongo-form.html
+++ b/public/templates/mongo-form.html
@@ -38,6 +38,6 @@
         </div>
     </div>
     <div class="row row-centered button-row">
-        <a type="submit" class="button button-border" ng-click="createTodo()">Click Here to Submit</a>
+        <a type="submit" class="button button-border" ng-click="createUser()">Click Here to Submit</a>
     </div>
 </div>
