--- a/public/templates/myForm.html
+++ b/public/templates/myForm.html
@@ -1,21 +1,21 @@
 <div class="container">
     <h2 class="text-center">Get in Touch with Me Today!</h2>
     <p>Whether you are curious about any projects I am currently working on, or simply introducing yourself, I enjoy continuously growing my network in the web development community. Therefore, you can easily get in touch by submitting the following information, which I ensure to respond to A.S.A.P </p>
-    <form name="myForm" ng-submit="createUser()">
+    <form name="myForm">
         <div class="row row-centered">
             <div class="col col-xs-12 col-md-9 col-centered">
-                <label for="nameInput">Enter Your Name.</label>
-                <textarea class="form-control name" type="text" name="nameInput" ng-model="formData.nameInput" required></textarea>
-                <div ng-if="myForm.nameInput.$dirty">
-                    <div ng-show="required">This Field is Required</div>
+                <label for="name">Enter Your Name.</label>
+                <textarea class="form-control name" type="text" name="name" ng-model="formData.name" required></textarea>
+                <div ng-messages="myForm.name.$error" ng-if="myForm.name.$dirty">
+                    <div ng-message="required">This Field is Required</div>
                 </div>
             </div>
         </div>
         <div class="row row-centered">
             <div class="col-xs-12 col-md-9 col-centered">
-                <label for="emailAddress">Enter Your Email Address.</label>
-                <textarea class="form-control name" type="email" name="emailInput" ng-model="formData.emailInput" required></textarea>
-                <div ng-messages="formData.emailInput.$error" ng-if="formData.emailInput.$dirty">
+                <label for="email">Enter Your Email Address.</label>
+                <textarea class="form-control name" type="email" name="email" ng-model="formData.email" required></textarea>
+                <div ng-messages="myForm.email.$error" ng-if="myForm.email.$dirty">
                     <div ng-message="required">This Field is Required</div>
                     <div ng-message="email">Must be a valid email address.</div>
                 </div>
@@ -23,9 +23,9 @@
         </div>
         <div class="row row-centered">
             <div class="col-xs-12 col-md-9 col-centered">
-                <label for="emailAddress">Where are you located?</label>
-                <textarea class="form-control name" type="text" name="locationInput" ng-model="formData.locationInput" required></textarea>
-                <div ng-messages="formData.locationInput.$error" ng-if="formData.locationInput.$dirty">
+                <label for="location">Where are you located?</label>
+                <textarea class="form-control name" type="text" name="location" ng-model="formData.location" required></textarea>
+                <div ng-messages="myForm.location.$error" ng-if="myForm.location.$dirty">
                     <div ng-message="required">This Field is Required</div>
                     <div ng-message="email">Must be a valid email address.</div>
                 </div>
@@ -34,7 +34,7 @@
         <div class="row row-centered">
             <div class="col-xs-12 col-md-9 col-centered">
                 <div class="panel panel-primary">
-                    <select ng-model="formData.reasonInput" name="reasonInput" id="reasonInput">
+                    <select ng-model="formData.reason" name="reason" id="reason">
                         <option value="">Select a Reason for Contacting Me</option>
                         <option value="Web Development">Question About Web Development</option>
                         <option value="Graphic Design">Question About Graphic Design</option>
@@ -46,9 +46,9 @@
         </div>
         <div class="row row-centered">
             <div class="col-xs-12 col-md-9 col-centered">
-                <label for="messageInput">Your reason for contacting me today?</label>
-                <textarea class="form-control name" type="text" name="messageInput" ng-model="formData.messageInput" required minlength="100" maxlength="1000"></textarea>
-                <div ng-messages="formData.messageInput.$error" ng-if="formData.messageInput.$dirty">
+                <label for="message">Your reason for contacting me today?</label>
+                <textarea class="form-control name" type="text" name="message" ng-model="formData.message" required minlength="100" maxlength="1000"></textarea>
+                <div ng-messages="myForm.message.$error" ng-if="myForm.message.$dirty">
                     <div ng-message="required">This Field is Required</div>
                     <div ng-message="minlength">Elabortate a little more please.</div>
                     <div ng-message="maxlength">You've Excited Your Character Number. Try making it a litle more concise</div>
@@ -56,6 +56,6 @@
             </div>
         </div>
         <div class="row row-centered button-row">
-            <a type="submit" ng-disabled="formData.$invalid" class="button button-border">Click Here to Submit</a></div>
+            <a type="submit" ng-disabled="formData.$invalid" ng-click="createUser()"class="button button-border">Click Here to Submit</a></div>
         <form>
 </div>
