--- a/public/templates/ngMessage-form.html
+++ b/public/templates/ngMessage-form.html
@@ -1,7 +1,7 @@
 <div class="container">
     <h2 class="text-center">Get in Touch with Me Today!</h2>
     <p>Whether you are curious about any projects I am currently working on, or simply introducing yourself, I enjoy continuously growing my network in the web development community. Therefore, you can easily get in touch by submitting the following information, which I ensure to respond to A.S.A.P </p>
-    <div class="form-group row row-centered" ng-class="{'has-error':contactForm.inputName.$invalid &&  contactForm.inputName.$dirty}">
+    <div class="form-group row row-centered" ng-class="{'has-error':contactForm.nameInput.$invalid &&  contactForm.nameInput.$dirty}">
         <div class="col-xs-12 col-md-9 col-centered">
              <label for="formData.nameInput">Your Name</label>
             <input type='text' id='nameInput' name="nameInput" placeholder='John Doe' ng-model='formData.nameInput' required>
