--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1600,12 +1600,12 @@ li a {
 }
 
 /* line 111, ../sass/_typography.scss */
-a:active, a .button .border-button {
+a:link, a .button .border-button {
   font-family: "Merriweather";
   font-weight: 700;
 }
 /* line 114, ../sass/_typography.scss */
-a:active:hover, a .button .border-button:hover {
+a:link:hover, a .button .border-button:hover {
   text-decoration: none;
 }
 
