removed Susy debugger in top right corner

--- a/public/sass/_grids.scss
+++ b/public/sass/_grids.scss
@@ -8,7 +8,8 @@ $susy: ( flow: ltr, math: fluid, // static requires column-width
 container-position: center, // left, center, it is the padding
 //gutter-position: after, //before after | split | inside | inside-static
 columns: 12, gutters: 1/4, //Space Between Elements
-global-box-sizing: border-box, debug: (image: show-columns, output: overlay, toggle: top left));
+global-box-sizing: border-box);
+//debug: (image: show-columns, output: overlay, toggle: top left)
 *,
 *:before,
 *:after {
