Created favicon for thomasgreco.me which I then used the serve-favicon module in correlation with express to correctly serve the file. Also, I added new meta tags as I begin to work on my SEO

--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,5 +1,6 @@
 <div ui-view="Header"></div>
 <div class="wrap">
     <div ui-view="Main-Content"></div>
+    <div ui-view="Slider"></div>
 </div>
 <div ui-view="Footer"></div>
