--- a/public/templates/top-content.html
+++ b/public/templates/top-content.html
@@ -26,9 +26,9 @@
     </div>
     <div class="panel">
         <img class="panel_img" src="images/skills/susy.png" alt="">
-        <h2 class="panel-heading">Custom Grid System with Susy</h2>
+        <h2 class="panel-heading">Angular Form Validation</h2>
         <p>
-            Due to my background in graphic design, I quickly became infatuated with responsive design. Therefore, my first main area of focus was to understand how these different grid systems, most notable Twitter BootStrap and Zurb Foundation. Moreover, I began practicing with Susy to create custom grid systems as I became more proficient working with the Compass Framework, which is what I used to create this web page. As time continues to evolve with the times, however, I truly believe the flexbox layout will be utilized very heavily, and I am happy to see that Google Materialize has already utilized the flex layout, which has helped theme successfully implement an extremely powerful system of tools.
+          When I made the decision to focus all of my attention towards learning JavaScript, I became faced with a decision: which JavaScript MV* framework would I focus on? 
         </p>
     </div>
     <hr class="about-hr">
