Added information about ngMessages + Ui router picture

--- a/public/templates/main-content.html
+++ b/public/templates/main-content.html
@@ -1,13 +1,16 @@
 <div class="main-content">
-    <h2 class="main-heading">Welcome to thomasgreco.me</h2>   
+    <h2 class="main-heading">Welcome to thomasgreco.me</h2>
     <p>
-    The page you are viewing is a Single Page Web Appliation, built on top of the node platform. To learn more over the specific technologies used in this web application, you can visit the applications <a ui-sref="about">about state</a>. That said, I developed this web application to help showcase both my passion and knowledge of web development. Before finding myself passionate about building web applications, I worked asa graphic designer for <a href="http://sodexousa.com/usen/default.aspx" target="_blank">Sodexo USA</a>, which is when I realized I had a gift for visualizing intriguing graphics. As someone who values web design extremely highly, my proficiency in using PhotoShop, and Illustrator played a huge role in my growth as a web developer. <br>
-    That said, I offer more than just the ability to program highly functional web applications. I possess a similar love for typography, as I do Angular, because I know how important both aspects when trying to achieve stunning User Interfaces.
+        Thank you for visiting my web application. My name is Thomas Greco, and I am a web developer based out of New York City. Specifically, my main focus is building web applications with the help of isomorphic JavaScript. This application was custom built by myself using the M.E.A.N. stack. By visiting this applications <a ui-sref="about">technologies state</a>, you can read more about the specific things I focused on when building this application.
+        <br>
+        <br> In addition to programming thomasgreco.me, I also created the layout, and designed the logo using Adobe Illustrator. Before focusing on web development, I worked in graphic design, which had a tremendous impact on the way I approach development. Moreover, I value the proper use of design to help achieve the best possible user experience.
+        <br>
+        <br> If you are interested in working with me, or simply have a question, fill out this <a ui-sref="contact">contact form</a> and I will get back to you as soon as possible!
+    </p>
     <hr>
-<h2 class="main-heading"> My Time In Web Development</h2>
-        <p>As a self-taught developer, I often times had to spend hours trying to figure out solutions to problems that at sometimes looked completely foreign to me. Although these times were indeed difficult, I strongly believe that the perserverence which I displayed during these times played a large role in my growth as a developer. Additionally, it was this hunger for knowledge that continuously pushed me to learn more, specificially regarding full stack applications built with JavaScript in the backend. Additonally, my love for web development grew in direct correlation with my knowledge as I finally understood the inner-workings of Rest API's, the client-server model, PaaS, and so much more. In addition to the page I created regarding this application, I have created a <a ui-sref="contact">Contact form</a>, which you can use to reach out to me if you are curious about any projects I am working on, or if you have a job in which you feel as though I would be a good fit.</p>
-
-
+    <h2 class="main-heading">My Ghost Blog</h2>
+    <p>As a self-taught developer, one of the biggest regrets I have was not documenting my work by means of a blog. I was constantly seeking knowledge, and felt as though I was not skilled enough to give advice. Now, however, I haved reached the point in where I believe I can truly provide information that can be wholly benefical to those striving to learn about different technologies in web development. Therefore, this blog will consist of short, person pieces about my experiences with different technologies, as well as articles that I have had published on <a href="http://sitepoint.com" target="_blank">SitePoint.com</a>. That said, I recently rekindled my position at SitePoint after dedicating a few months towards gaining certain knowledge regarding development. In turn, I am now extremely confident in my work as well as my writing, and I am excited to see what is to come.
+    </p>
     <div class="mc-slider">
         <flex-slider slide="s in slides" animation="slide" control-nav="thumbnails">
             <li data-thumb="{{s}}">
