--- a/public/templates/top-content.html
+++ b/public/templates/top-content.html
@@ -4,31 +4,34 @@
         When developing this web application, I integrated several key technologies that I spend a great deal of time with during my tenure studying web development. In order to showcase these technologies, I decided to create this state of my application.
     </p>
     <div class="panel">
-        <img class="panel_img" src="images/skills/Angular-300x290.png" alt="">
+         <img class="panel_img" src="images/skills/ui-router.png" alt="Angular UI Router">
         <h2 class="panel-heading">Nested States with the Help of UI-Router</h2>
         <p>
-            When building this application, I took advantage of using absolute naming with. As a result of this, I have the ability to easily integrate new content into my application, as well as remote it. In turn, this application extremely scalable. In this application, every state consists of Header, Main-Content, and Footer view for the most part, with the exception of this view. This view, on the other hand, includes an additional div created to handle anchor elements at the bottom of the page, which in this case is linked to this project's GitHub repository.
+            When building this application, I took advantage of absolute naming with the help of UI-Router. As a result of this, I have the ability to easily integrate new content into my application, as well as remove it, thus making this application extremely scalable. Before using ui-router, I previously used ngRoute to route my single page applications; however, I found that ui-router offered capabilities far superior to ngRoute, specifically when dealing with nested states.
         </p>
     </div>
     <div class="panel">
-        <img class="panel_img" src="images/mongoDB.png" alt="">
+        <img class="panel_img" src="images/mongoDB.png" alt="MongoDB">
         <h2 class="panel-heading">MongoDB Database Storage in the Back-end</h2>
         <p>
-             When buiding out this applicaton, I understood the importance of creating a method of users getting in touch with me. Therefore, I created a basic application form which I originally had wired to utilize FireBase's Backend-As-A-Service. Now, however, I have configured it to use MongoDB's NoSql Database. When dealing with MongoDB, I have worked to gain a great deal of knowledge of collections, and how to query databases for groups of data, as well as specific items in a collection.
+             When building out this application, I understood the importance of creating a method of users getting in touch with me. Therefore, I created a basic application form which I originally had wired to utilize FireBase's Backend-As-A-Service. Now, however, I have configured my contact form use a MongoDB's NoSql Database hosted on MongoLab. In addition to MongoDB, I used the mongoose module to handle my forms data, and post it to my database. When dealing with MongoDB, I have worked to gain a great deal of knowledge of collections; and I possess knowledge regard how to they are to be manipulated using the mongo command line tool so that I can query specific data, add and remove documents from a collection, and more.  
         </p>
     </div>
     <div class="panel">
-        <img class="panel_img" src="images/skills/grunt300x300.png" alt="">
+        <img class="panel_img" src="images/skills/grunt300x300.png" alt="Grunt JavaScript Task Runner">
         <h2 class="panel-heading">Built Using the Grunt JavaScript Task Runner</h2>
         <p>
             Whether I am using hot-keys in Adobe Illustrator, or using Sublime text plug-ins, I am always looking to speed up my development process. Therefore, I began to integrate GruntJS into my work-flow so that I could take care of all my tasks at once. Initially, I turned to Grunt to handle my .scss files, and reload them live in the browser after having trouble with Compass as a Ruby Gem. Now, as I continue to utilize Grunt each day, I have become comfortable with how Gruntfiles are configured. In turn, I grow more fond of the task runner each day. In addition to using Grunt, I have experience in using GulpJS, however, I decided to stick with learning Grunt instead as I felt as though it was used more widely throughout the development community.
         </p>
     </div>
     <div class="panel">
-        <img class="panel_img" src="images/skills/susy.png" alt="">
-        <h2 class="panel-heading">Angular Form Validation</h2>
+             <img class="panel_img" src="images/skills/Angular-300x290.png" alt="Angular 1.3">
+        <h2 class="panel-heading">Angular Form Validation Using ngMessages</h2>
         <p>
-          When I made the decision to focus all of my attention towards learning JavaScript, I became faced with a decision: which JavaScript MV* framework would I focus on? 
+          When I made the decision to focus the majority of my attention towards JavaScript, I had to make a decision regarding which JavaScript framework I was to spend my time learning. As you may have assumed, I decided on AngularJS due to the amount of developers using the framework. Also, it was comforting to know I was learning a framework that was being maintained by Google. 
+        </p>
+        <p>
+            Roughly 14 months after making that decision, I continue to focus on staying current with changes in Angular so it was only fitting that I utilized the ngMessages module when dealing with form validation. The ngMessages module was a brand new feature introduced with the release of Angular 1.3 in fall of last year; and I was able to leverage the power of this new module to respond to user input that I defined inside my html template. I even learned how to create directives using ng-model where I could define my own rules for validation if necessary. Additionally, this is just another example of my will to work through problems, which always results in my attainment of new knowledge.
         </p>
     </div>
     <hr class="about-hr">
