Fixed blogging section to point to blogspot

--- a/public/templates/main-content.html
+++ b/public/templates/main-content.html
@@ -1,5 +1,5 @@
 <div class="main-content">
-    <h2 class="main-heading">Welcome to thomasgreco.me</h2>
+    <h2 class="main-heading">Welcome to thomasgreco.me!</h2>
     <p>
         Thank you for visiting my web application. My name is Thomas Greco, and I am a web developer based out of New York City. Specifically, my main focus is building web applications with the help of isomorphic JavaScript. This application was custom built by myself using the M.E.A.N. stack. By visiting this applications <a ui-sref="about">technologies state</a>, you can read more about the specific things I focused on when building this application.
         <br>
@@ -8,8 +8,8 @@
         <br> If you are interested in working with me, or simply have a question, fill out this <a ui-sref="contact">contact form</a> and I will get back to you as soon as possible!
     </p>
     <hr>
-    <h2 class="main-heading">My Ghost Blog</h2>
-    <p>As a self-taught developer, one of the biggest regrets I have was not documenting my work by means of a blog. I was constantly seeking knowledge, and felt as though I was not skilled enough to give advice. Now, however, I haved reached the point in where I believe I can truly provide information that can be wholly benefical to those striving to learn about different technologies in web development. Therefore, this blog will consist of short, person pieces about my experiences with different technologies, as well as articles that I have had published on <a href="http://sitepoint.com" target="_blank">SitePoint.com</a>. That said, I recently rekindled my position at SitePoint after dedicating a few months towards gaining certain knowledge regarding development. In turn, I am now extremely confident in my work as well as my writing, and I am excited to see what is to come.
+    <h2 class="main-heading">Newest member of the blogging community</h2>
+ <p>While studying web development, I consistently took notes in order to further proceess the information that I was learning; I did not, however, utilize the tool of blogging. Although I wish I had, the only viable response is to implement one now, and so I have. The content that I currently have can be viewed <a href="http://thomasgreco.blogspot.com/" target="_blank">thomasgreco.blogspot.com,</a> however I am currently deciding on a definitive platform to use. That said, I have been working with ghost as an NPM module, and I am leaning towards configuring that to run on a subdomain of thomasgreco.me.</p>
     </p>
     <div class="mc-slider">
         <flex-slider slide="s in slides" animation="slide" control-nav="thumbnails">
