--- a/public/templates/myForm.html
+++ b/public/templates/myForm.html
@@ -6,7 +6,7 @@
             <div class="col col-xs-12 col-md-9 col-centered">
                 <label for="name">Enter Your Name.</label>
                 <textarea class="form-control name" type="text" name="name" ng-model="formData.name" required></textarea>
-                <div ng-messages="myForm.name.$error" ng-if="myForm.name.$dirty">
+                <div ng-messages="myForm.name.$error" class="form-error"ng-if="myForm.name.$dirty">
                     <div ng-message="required">This Field is Required</div>
                 </div>
             </div>
@@ -15,7 +15,7 @@
             <div class="col-xs-12 col-md-9 col-centered">
                 <label for="email">Enter Your Email Address.</label>
                 <textarea class="form-control name" type="email" name="email" ng-model="formData.email" required></textarea>
-                <div ng-messages="myForm.email.$error" ng-if="myForm.email.$dirty">
+                <div ng-messages="myForm.email.$error" class="form-error" ng-if="myForm.email.$dirty">
                     <div ng-message="required">This Field is Required</div>
                     <div ng-message="email">Must be a valid email address.</div>
                 </div>
@@ -25,7 +25,7 @@
             <div class="col-xs-12 col-md-9 col-centered">
                 <label for="location">Where are you located?</label>
                 <textarea class="form-control name" type="text" name="location" ng-model="formData.location" required></textarea>
-                <div ng-messages="myForm.location.$error" ng-if="myForm.location.$dirty">
+                <div ng-messages="myForm.location.$error" class="form-error" ng-if="myForm.location.$dirty">
                     <div ng-message="required">This Field is Required</div>
                     <div ng-message="email">Must be a valid email address.</div>
                 </div>
@@ -48,7 +48,7 @@
             <div class="col-xs-12 col-md-9 col-centered">
                 <label for="message">Your reason for contacting me today?</label>
                 <textarea class="form-control name" type="text" name="message" ng-model="formData.message" required minlength="100" maxlength="1000"></textarea>
-                <div ng-messages="myForm.message.$error" ng-if="myForm.message.$dirty">
+                <div ng-messages="myForm.message.$error" class="form-error" ng-if="myForm.message.$dirty">
                     <div ng-message="required">This Field is Required</div>
                     <div ng-message="minlength">Elabortate a little more please.</div>
                     <div ng-message="maxlength">You've Excited Your Character Number. Try making it a litle more concise</div>
